force-app/main/default/objects/Course_Module__c/Course_Module__c.object-meta.xml
<CustomObject>
    <description>Course Modules.</description>
    <label>Course Module</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>